--- a/RentMate/templates/home_app_tenant/tenant-maintenance.html
+++ b/RentMate/templates/home_app_tenant/tenant-maintenance.html
@@ -18,7 +18,7 @@
                 </svg>
                 Dashboard
             </a>
-            <a href="#" class="nav-item">
+            <a href="{% url 'tenant_payment' %}" class="nav-item">
                 <svg width="200" height="150" viewBox="0 0 200 150">
                   <rect x="10" y="10" width="180" height="130" rx="15" ry="15" fill="#f0f0f0" stroke="#ccc" stroke-width="2"/>
                   <text x="100" y="85" font-family="Arial, sans-serif" font-size="110" text-anchor="middle" alignment-baseline="middle">
